Fix inputs overflow

--- a/src/components/CalculationResults.css
+++ b/src/components/CalculationResults.css
@@ -9,7 +9,7 @@
     color: var(--white);
     padding: 2em;
     text-align: center;
-    color: var(--slate300);
+    color: var(--slat00);
     border-bottom-left-radius: 15%;
 }
 
